tinyc/test/bad/ptr-arith-bwand-l.c
int main()
{
    int x;
    int *p = &x;

    p & 1;

    return 0;
}
